# AI-LINUX-RUST

./: .gitignore  README.md  model1.pkl  server.py
.dump/grpc/: README.md
.dump/grpc/ex-client/: Cargo.toml
.dump/grpc/ex-client/src/: main.rs
.dump/grpc/ex-server/: Cargo.toml  build.rs
.dump/grpc/ex-server/src/: main.rs
.dump/grpc/protos/: agent.proto
.dump/grpc/rust_grpc_server/: build.rs
.dump/grpc/rust_grpc_server/src/: main.rs
.github/: pull_request_template.md
app/: CMakeLists.txt  README.md  grpc.cpp  grpc_client.cpp
app/api/: CMakeLists.txt  appEx.cpp  appEx.h
app/apiEx/: CMakeLists.txt  FileServer.cpp  FileServer.h  appEx.cpp  appEx.h  common.cmake
app/grpc/: CMakeLists.txt  agent.grpc.pb.cc  agent.grpc.pb.h  agent.pb.cc  agent.pb.h  grpc_client.cc
app/grpc/temp/: agent.grpc.pb.h  agent.pb.h
app/include/: grpc.h
app/m_grpc/: CMakeLists.txt
app/src/: JsonUtil.cpp  JsonUtil.h  main.cpp
grpc/client/src/: main.rs
mca/: Cargo.toml  README.md  build.rs  cbindgen.toml  test.cpp
mca/src/: gpt.rs  lib.rs  main copy.rs  main.rs
mca/src/agent/: agent.rs  agent_handler.rs  main.rs  mod.rs  model_connection.rs  model_enum.rs  model_structure.rs  test.rs
mca/src/api/: app.rs  app_base.rs  app_connection.rs  app_enum.rs  app_ex.rs  app_handler.rs  app_manager.rs  lib.rs  main.rs  mca.rs  mca_dbus.rs  mca_operation.rs  mod.rs  service.rs  service_base.rs  service_enum.rs  service_handler.rs  service_manager.rs
mca/src/api/services/: basic.rs  iris.rs  mod.rs
mca/src/common/: Errors.rs  utils.rs
mca/src/services/: file.rs  iris.rs  mnist.rs  mod.rs
model/: CMakeLists.txt  README.md  convert_to_onnx.py  dcgan.cpp  init.sh  install.sh  install1.sh  install2.sh  model_1.py  model_2.py  model_process.cpp  net.onnx  net_onnx.cpp  server.py  train_model_onnx.py
model/data/: org.mca.Model.service  org.mca.Model1.service  org.mca.Model2.service
model/prev/: convert_to_onnx.py  net.pt  net_onnx.cpp
model/src/: CMakeLists.txt  IrisModel.cpp  Model.cpp  Model.h  Timer.h  model_process.cpp
model/src1/: CMakeLists.txt  IrisModel.cpp  MnistModel.cpp  Model.cpp  Model.h
model/src2/: CMakeLists.txt  MnistModel.cpp  Model.cpp  Model.h  Timer.h
model/weights/: mnist.onnx
protos/: agent.proto  mca.proto  voting.proto
