[package]
name = "mca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = "3.14.1"
async-std = {version = "1.12.0", features = ["attributes"]}
futures-util = "0.3"
event-listener = "4.0.2"
serde = "1.0.195"
serde_json = "1.0.79"
zvariant = "3.15.0"


[lib]
path = "src/api/lib.rs"
crate-type = ["staticlib"]