[package]
name = "mca_package"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = "3.14.1"
async-std = {version = "1.12.0", features = ["attributes"]}
futures-util = "0.3"
event-listener = "4.0.2"
serde = "1.0.195"
serde_json = "1.0.79"
zvariant = "3.15.0"
tokio = {version = "1.35.1", features = ["full"]}
lazy_static = "1.4.0"
prost = "0.12.3"
tonic = "0.10.2"


[[bin]]
name = "mca-agent"
path = "src/agent/main.rs"

[[bin]]
name = "mcf-agent-test"
path = "src/agent/test.rs"

[build-dependencies]
tonic-build = "0.10.2"
